--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -33,6 +33,12 @@
     "editor.tabSize": 2
   },
 
+  "[github-actions-workflow]": {
+    "editor.formatOnSave": true,
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.tabSize": 2
+  },
+
   "[rust]": {
     "editor.formatOnSave": true,
     "editor.defaultFormatter": "rust-lang.rust-analyzer"
