--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -5,6 +5,7 @@ jobs:
   call-action:
     runs-on: ubuntu-latest
     steps:
+      - uses: checkout@v4
       - uses: ./
         with:
           test-input: "test"
