Test dynamic outputs

--- a/.github/workflows/test_workflow.yml
+++ b/.github/workflows/test_workflow.yml
@@ -7,3 +7,6 @@ jobs:
     steps:
       - uses: actions/checkout@v4
       - uses: ./
+        id: tag-track
+      - run: echo ${{ steps.tag-track.outputs.version-api }}
+      - run: echo ${{ steps.tag-track.outputs.version-ui }}
